<resources>
    <string name="app_name">Wgo</string>
    <string name="action_settings">Settings</string>


    <!--Welcome -->
    <string name="welcome">WELCOME!</string>
    <string name="welcome1">Wgo is the app that tells you when</string>
    <string name="welcome2">to travel. Set your budget, select a range</string>
    <string name="welcome3">of dates, and we will do the work for you,</string>
    <string name="welcome4">offering the best deals you can find!</string>

    <string name="wanna_trip">WANNA TRIP?</string>
    <string name="trip1">Select your depart and landing</string>
    <string name="trip2">locations, and a range of flying dates</string>

    <string name="nice_journey">HAVE A NICE JOURNEY</string>
    <string name="journey1">Wgo will do the researchand come</string>
    <string name="journey2">back with the best offers for you</string>
    <string name="lets_go">LET\'S GO!</string>
    <!-- Home -->
    <string name="your_last_search">YOUR LAST SEARCH</string>
    <string name="view_more">VIEW MORE RESULTS ></string>
    <string name="new_alert">NEW ALERT</string>
    <string name="manage_alerts">MANAGE ALERTS</string>
    <string name="tell_friends">TELL YOUR FRIENDS</string>
    <string name="share_friends1">Share you Wgo experience,</string>
    <string name="share_friends2">we\'re sure that someone else are</string>
    <string name="share_friends3">looking for good flights! :)</string>
    <string name="see_you">SEE YOU SOON</string>
    <string name="logout_complete">Log out complete</string>
    <string name="accept">ACCEPT</string>

    <!--Login -->
    <string name="login">LOG IN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="lets_start">LET\'S START</string>
    <string name="or_can">Or you can</string>
    <string name="fb_connect">FACEBOOK CONNECT</string>
    <string name="not_registered">Not registered yet? Please,</string>
    <string name="sign_in">Sign in</string>

    <!-- Error Login -->
    <string name="ups">UPS...</string>
    <string name="error_mail">The mail was not properly introduced</string>
    <string name="error_password">Password can\'t be empty</string>
    <string name="error_login">The user and password don\'t match, please, try again</string>
    <string name="wait">WAIT...</string>
    <string name="error_fb1">We don\'t have your mail</string>
    <string name="error_fb2">so we won\'t be able to send you</string>
    <string name="error_fb3">our unbelievable offers!</string>
    <string name="change_mail">CHANGE MAIL</string>
    <string name="remind_later">REMIND ME LATER</string>


    <!-- Register -->
    <string name="register">REGISTER</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm password</string>

    <!-- New Alert and Search -->
    <string name="search">SEARCH</string>
    <string name="start_trip">START MY TRIP AT</string>
    <string name="destination">DESTINATION</string>
    <string name="have_select">YOU HAVE SELECT</string>
    <string name="weekends">WEEKENDS</string>
    <string name="want_expend">WANT EXPEND</string>
    <string name="how_many_people">HOW MANY PEOPLE</string>
    <string name="show_me">SHOW ME WHAT\'S AVAILABLE!</string>
    <string name="show_flights">SHOW FLIGHTS</string>
    <string name="error_alert_created">The alert was not created. Do you already have such alert?</string>
    <string name="error_alert_no_results">No flights matching your search criteria, please try again changing some parameters.</string>
    <string name="error_alert_arrival_date">Arrival date has to be at least one day after the departure date, please select a correct date.</string>
    <string name="error_alert_arrival">Arrival city is wrong, please select a city from the list</string>
    <!-- Available Flights -->
    <string name="available_flights">AVAILABLE FLIGHTS</string>
    <string name="from">From</string>
    <string name="to">to</string>
    <string name="best_price">Best price per each weekend</string>
    <string name="last_check">Last check</string>
    <string name="book_now">BOOK NOW</string>

    <!-- Weekends -->
    <string name="select_weeks">SELECT YOUR WEEKENDS</string>

    <!-- Settings -->
    <string name="settings">SETTINGS</string>
    <string name="language">LANGUAGE</string>
    <string name="currency">CURRENCY</string>
    <string name="alert_frequency">ALERT FREQUENCY</string>
    <string name="change_email">CHANGE E-MAIL ADDRESS</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="new_password_again">New password again</string>
    <string name="delete_account">DELETE ACCOUNT</string>
    <string name="logout">LOG OUT</string>

</resources>
