<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="wgo_app.wgo.LoginActivity"
    android:background="@color/white">

    <!-- Login Header Init-->
    <RelativeLayout
        android:id="@+id/login_header"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/green_button">

        <ImageView
            android:id="@+id/back_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold"/>

    </RelativeLayout>

    <!-- Login Header End-->

    <!-- Form Login Init -->
        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_centerVertical="true"
            android:background="@drawable/white_input"
            android:inputType="textEmailAddress"
            android:ellipsize="start"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal|center_vertical"
            android:hint="@string/email"
            android:textColorHint="@color/grey_dark"
            android:textColor="@color/grey_dark"/>

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_centerVertical="true"
            android:background="@drawable/white_input"
            android:inputType="text"
            android:ellipsize="start"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="20dp"
            android:layout_below="@+id/email_input"
            android:gravity="center_horizontal|center_vertical"
            android:hint="@string/password"
            android:textColorHint="@color/grey_dark"
            android:textColor="@color/grey_dark"/>

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_centerVertical="true"
            android:background="@drawable/green_button"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="20dp"
            android:layout_below="@+id/password_input"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/lets_start"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/text_can"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_can"
            android:textColor="@color/grey"
            android:layout_below="@+id/button_login"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/button_facebook"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_centerVertical="true"
            android:background="@drawable/facebook_button"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="20dp"
            android:layout_below="@+id/text_can"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/fb_connect"
            android:textColor="@color/white"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/button_facebook">
            <TextView
                android:id="@+id/not_registered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_registered"
                android:textColor="@color/grey"/>

            <TextView
                android:id="@+id/sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textColor="@color/green"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/not_registered"/>
        </RelativeLayout>
    <!-- Form Login End -->

</RelativeLayout>
